[tool.poetry]
name = "ejunzfactory"
version = "0.1.0"
description = ""
authors = ["Jacka10086 <i@jacka10086.me>"]

[tool.poetry.dependencies]
python = "3.9.20"
absl-py = "0.14.1"
aiohttp = "3.7.4.post0"
async-timeout = "3.0.1"
attrs = "21.2.0"
blis = "0.7.4"
cachetools = "4.2.4"
catalogue = "2.0.6"
certifi = "2021.5.30"
chardet = "4.0.0"
charset-normalizer = "2.0.6"
click = "8.0.1"
colorama = "0.4.4"
cymem = "2.0.5"
filelock = "3.3.0"
Flask = "2.0.2"
Flask-Cors = "3.0.10"
fsspec = "^2023.1.0"
future = "0.18.2"
google-auth = "1.35.0"
google-auth-oauthlib = "0.4.6"
grpcio = "1.41.0"
idna = "3.2"
importlib-metadata = "4.8.1"
itsdangerous = "2.0.1"
Jinja2 = "3.0.1"
joblib = "1.0.1"
Markdown = "3.3.4"
MarkupSafe = "2.0.1"
multidict = "5.2.0"
murmurhash = "1.0.5"
nltk = "3.6.3"
numpy = "1.21.2"
oauthlib = "3.1.1"
packaging = "21.0"
pandas = "1.3.3"
pathy = "0.6.0"
pickle-mixin = "1.0.2"
preshed = "3.0.5"
protobuf = "3.18.0"
pyasn1 = "0.4.8"
pyasn1-modules = "0.2.8"
pydantic = "1.8.2"
pyparsing = "2.4.7"
python-dateutil = "2.8.2"
pytorch-lightning = "1.2.10"
pytz = "2021.3"
PyYAML = "5.3.1"
regex = "2021.9.30"
requests = "^2.32.2"
requests-oauthlib = "1.3.0"
rsa = "4.7.2"
sacremoses = "0.0.46"
scikit-learn = "1.0"
scipy = "1.7.1"
sense2vec = "2.0.0"
six = "1.16.0"
smart-open = "5.2.1"
spacy = "3.1.3"
spacy-legacy = "3.0.8"
srsly = "2.4.1"
tensorboard = "2.6.0"
tensorboard-data-server = "0.6.1"
tensorboard-plugin-wit = "1.8.0"
thinc = "8.0.10"
threadpoolctl = "3.0.0"
tokenizers = "0.10.3"
toolz = "0.11.1"
torch = "*"
torchvision = "*"
torchaudio = "*"
torchmetrics = "0.2.0"
transformers = "4.3.0"
typer = "0.4.0"
typing-extensions = "3.10.0.2"
urllib3 = "1.26.7"
wasabi = "0.8.2"
Werkzeug = "2.0.1"
yarl = "1.6.3"
zipp = "3.6.0"
datasets = "^3.1.0"
sentencepiece = "^0.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
